# warehouse

./: .gitignore  pyproject.toml
airflow/configs/: airflow_values.yaml
src_airflow/configs/: airflow_values.yaml
src_airflow/dags/: test_dag.py
